<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Сделать список иконок в баре - в виде выпадающего списка при нажатии на 1 иконку.-->
    <item
        android:id="@+id/detailsMenu"
        android:icon="@drawable/details"
        android:title="@string/details"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/favoritesTopAppBar"
                android:icon="@drawable/favorites"
                android:title="@string/favorites"
                app:showAsAction="ifRoom"/>


            <item
                android:id="@+id/settingsTopAppBar"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/uploadTopAppBar"
                android:icon="@drawable/upload"
                android:title="@string/upload"
                app:showAsAction="ifRoom"/>

        </menu>

    </item>

</menu>